--- a/src/components/CardGroup/Card/Card.css
+++ b/src/components/CardGroup/Card/Card.css
@@ -1,6 +1,24 @@
 .card{
     width: 175px; 
     font-size: 12px; 
+    /* for the badge so it can be relative to this element  */
+    position: relative; 
+    
+    display: flex; 
+    flex: 0 0 auto; 
+    flex-direction: column;
+}
+
+.card-badge{
+    position: absolute;
+    left: 50%; 
+    transform: translateX(-50%);
+    top: 5px;
+    background: white;
+    border-radius: 2px;
+    font-weight: bold; 
+    padding: 5px 7px; 
+
 }
 
 .card-review-icon{
@@ -18,6 +36,7 @@
     width: 100%; 
     height: 235px;
     border-radius: 9px;  
+    margin-bottom: 5px;
 }
 
 .card-review{
@@ -27,6 +46,12 @@
 
 .card-title{
     color: #222222; 
+    overflow: hiden; 
+    text-overflow: ellipsis;
     font-size: 1rem; 
     margin-bottom: 0.8rem;
+}
+
+.card-price{
+    margin-top: auto; 
 }
