--- a/src/components/CardGroup/CardGroup.css
+++ b/src/components/CardGroup/CardGroup.css
@@ -4,7 +4,7 @@
     gap: 20px; 
     flex-wrap: nowrap;
     /* overflow-x: auto;  */
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     
 }
